// -*- mode: protobuf -*-
//
// A schema for precision statistics and the display context.

syntax = "proto2";

package beancount;

// Summarized precision statistics data.
// This can be used to format numbers.
message PrecisionStats {
  repeated Pair pairs = 1;
}

// Stats over a specific currency pair.
message Pair {
  optional string quote = 1;
  optional string base = 2;
  optional bool has_sign = 3;
  optional int32 max_integer_digits = 4;
  optional int32 exponent_mode = 5;
  optional int32 exponent_max = 6;
}
